# mtf

./: CMakeLists.txt  README.md  main.cpp  mtf-cut.txt  mtf.cpp  mtf.h  table.py  tg05_output.txt
